--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,59 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-09-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1239294'>PaymentRequest: Remove unnecessary code</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-09-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1238294'>Remove SecureChannelClient from MultiDeviceSetupImpl</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2018-09-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1235356'>Apply snake_case to probe/*</a></td><td>Amos Lim</td></tr>
+<tr><td>2018-09-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1235354'>Apply snake_case to InstanceCountersMemoryDumpProvider.cc</a></td><td>Amos Lim</td></tr>
+<tr><td>2018-09-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1232810'>Use Element&amp; instead of Element* as a parameter of HasEquivalentAttributes</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2018-09-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1207789'>Split message_port.mojom into two mojoms.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-09-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1230453'>Apply snake_case to css/*.json5</a></td><td>Amos Lim</td></tr>
+<tr><td>2018-09-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1229726'>Rename components/web_cache/public/interfaces to mojom</a></td><td>Amos Lim</td></tr>
+<tr><td>2018-09-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1230173'>Remove [TreatNullAs=NullString] from value attribute on HTMLTextAreaElement</a></td><td>Amos Lim</td></tr>
+<tr><td>2018-09-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1164145'>Do not use v8_generated_core_bindings in jumbo build</a></td><td>David Michael Barr</td></tr>
+<tr><td>2018-09-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1226716'>Jumbo: Fix a build error in spatial_navigation.h</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-09-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1206750'>PaymentRequest: Implement PaymentResponse.payerdetailchange event</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-09-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1221011'>Replace WTF_MAKE_NONCOPYABLE with DISALLOW_COPY_AND_ASSIGN in renderer/modules/service_worker/*</a></td><td>Amos Lim</td></tr>
+<tr><td>2018-09-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1215142'>Use ContainerNode&amp; instead of ContainerNode* as a parameter</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2018-09-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1212422'>Jumbo: Fix a build error in components/content_settings</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-09-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1201625'>PaymentRequest: Implement shippingAddressErrors in PaymentDetailsUpdate</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-09-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1203753'>Rename message_port directories to messaging.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-09-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1201508'>PaymentRequest: Refactor IsValidPaymentValidationErrorsFormat()</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-08-31</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1198664'>[jumbo] Rename function name to fix a jumbo build fail</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2018-08-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1192371'>Use ContainsValue() instead of std::find() in chrome/chrome_cleaner</a></td><td>DongJun Kim</td></tr>
+<tr><td>2018-08-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1189324'>Use Event&amp; instead of Event* as a parameter of PostDispatchEventHandler</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2018-08-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1189522'>WebXR: Introduce DOMPointReadOnly instead of XRStageBoundsPoint</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-08-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1190045'>Grid properties should not accept unitless length quirk</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2018-08-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1188168'>Use ContainsValue() instead of std::find() in chromeos</a></td><td>DongJun Kim</td></tr>
+<tr><td>2018-08-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1189662'>PaymentRequest: Fix a bug in PaymentRequest.retry() browser tests</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-08-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1177218'>Use float equality check function from cc/base/math_util.h</a></td><td>v.paturi</td></tr>
+<tr><td>2018-08-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1188060'>Use ContainsValue() instead of std::find() in chromeos/components/tether/</a></td><td>DongJun Kim</td></tr>
+<tr><td>2018-08-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1144587'>PaymentRequest: Implement desktop UI for PaymentResponse.retry()</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-08-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1183268'>Use ContainsValue() instead of std::find() in components/autofill #2</a></td><td>DongJun Kim</td></tr>
+<tr><td>2018-08-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1181017'>Remove the test media/seek-to-currentTime.html</a></td><td>Sriram</td></tr>
+<tr><td>2018-08-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1181007'>Fix flakiness for media/video-played-collapse.html</a></td><td>Sriram</td></tr>
+<tr><td>2018-08-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1179520'>Use Event&amp; instead of Event* as a parameter of PreDispatchEventHandler</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2018-08-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1126889'>Introduce FieldDataManager to replace FieldValueAndPropertiesMaskMap.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-08-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1179481'>Use ContainerNode&amp; instead of ContainerNode* as a parameter of RemovedFrom</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2018-08-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1175753'>Use Event&amp; instead of Event* as a parameter of DefaultEventHandler</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2018-08-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1177530'>Use ContainerNode&amp; instead of ContainerNode* as a parameter of InsertedInto</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2018-08-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1172308'>Remove [TreatNullAs=NullString] from data attribute on CharacterData</a></td><td>Amos Lim</td></tr>
+<tr><td>2018-08-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1172462'>Fix invalid charset detection in a meta element</a></td><td>Amos Lim</td></tr>
+<tr><td>2018-08-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1170709'>Rename AssistantEmptyQuery to AssistantNullQuery and kEmpty to kNull</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-08-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1171976'>Rename user_menu_ to menu_ in LoginUserView.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-08-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1170157'>Rename user_dropdown_ to dropdown_</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-08-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1168944'>fixup! Qualify const char[] sql queries with |static|</a></td><td>Xunran Ding</td></tr>
+<tr><td>2018-08-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1165262'>Remove CertNotAllowedForProfilePredicate and use labmda instead.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-08-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1064250'>Remove HTMLFrameSetElement's anonymous getter</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2018-08-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1166777'>[CleanUp] Remove useless comments in document_marker_painter.cc</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-08-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1162091'>PaymentRequest: Rename show_resolver_ into accept_resolver_</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-08-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1159940'>Clean up call sites of FrameSelection::SetSelectionAndEndTyping</a></td><td>tanvir.rizvi</td></tr>
+<tr><td>2018-08-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1142045'>PaymentRequest: Implement PaymentResponse.retry() in renderer and mojo</a></td><td>Jinho Bang</td></tr>
+<tr><td>2018-08-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1158109'>Cleanup unused member of GranularityStrategyTest</a></td><td>tanvir.rizvi</td></tr>
+<tr><td>2018-07-31</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1154861'>Clean up call sites of FrameSelection::SetSelectionAndEndTyping</a></td><td>tanvir.rizvi</td></tr>
+<tr><td>2018-07-31</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1155286'>Remove constructed_tree_scopes from CSSStyleSheet</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2018-07-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1146122'>Start same-origin URLs with slash in cache storage dev tools</a></td><td>Xunran Ding</td></tr>
+<tr><td>2018-07-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1144990'>Move 'OrphanedFormatString' to to the list of errors</a></td><td>Amos Lim</td></tr>
 <tr><td>2018-07-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1141753'>PaymentRequest: Fix a typo in wpt test</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-07-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1139454'>Move Authenticator interface into blink.mojom namespace</a></td><td>Amos Lim</td></tr>
 <tr><td>2018-07-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1142044'>PaymentRequest: Drop prefixes, suffixes from error field members</a></td><td>Jinho Bang</td></tr>
