--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-09-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1248143'>Use ContainsValue() instead of std::find() in chrome/browser/chromeos</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-09-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1248522'>Use ContainsValue() instead of std::find() in chrome/chrome_cleaner</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-09-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1242571'>Change some local functions of css_crossfade_value.cc to take a const CSSValue&amp;</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-09-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1239294'>PaymentRequest: Remove unnecessary code</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-09-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1238294'>Remove SecureChannelClient from MultiDeviceSetupImpl</a></td><td>Hwanseung Lee</td></tr>
