--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-10-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1253168'>Rename TouchAdjustment namepsace to touch_adjustment</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-10-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1252225'>Move onselectionchange and onselectstart to GlobalEventHandlers</a></td><td>Amos Lim</td></tr>
 <tr><td>2018-09-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1248143'>Use ContainsValue() instead of std::find() in chrome/browser/chromeos</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-09-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1248522'>Use ContainsValue() instead of std::find() in chrome/chrome_cleaner</a></td><td>Zhuoyu Qian</td></tr>
