--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-10-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1258642'>Rename ColorSpaceUtilities namepsace to color_space_utilities</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-10-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1253942'>PaymentRequest: Replace PayerErrorFields with PayerErrors</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-10-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1255082'>Revert "PaymentRequest: Fix a memory leak in retry()"</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-10-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1226774'>PaymentRequest: Implement skeleton code for PaymentMethodChange event</a></td><td>Jinho Bang</td></tr>
