--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-10-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1248068'>Use ContainsValue() instead of std::find() in components/</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-10-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1263637'>Remove external/wpt/svg/interfaces-expected.txt</a></td><td>Amos Lim</td></tr>
 <tr><td>2018-10-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1255083'>Remove [TreatNullAs=NullString] from CanvasFillStrokeStyles</a></td><td>Amos Lim</td></tr>
 <tr><td>2018-10-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1258682'>Rename ListMarkerText namepsace to list_marker_text</a></td><td>Hwanseung Lee</td></tr>
