--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-10-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1166609'>Remove ModuleNotAllowedForProfilePredicate and use labmda instead.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-10-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1267095'>PaymentRequest: Fix a crash when updating content view</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-10-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1248068'>Use ContainsValue() instead of std::find() in components/</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-10-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1263637'>Remove external/wpt/svg/interfaces-expected.txt</a></td><td>Amos Lim</td></tr>
