--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-10-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1248141'>Use ContainsValue() instead of std::find() in content/</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-10-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1278453'>Remove the unused parameter of AllocateWorkerProcess()</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-10-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1273197'>Rename "pattern" to "scope" in ServiceWorker code</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-10-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1278567'>Change cpp.tmpl files to cc.tmpl</a></td><td>Amos Lim</td></tr>
