--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-10-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1285790'>Rename EventHandlingUtil namepsace to event_handling_util</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-10-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1282644'>Rename TouchActionUtil namepsace to touch_action_util</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-10-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1248141'>Use ContainsValue() instead of std::find() in content/</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-10-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1278453'>Remove the unused parameter of AllocateWorkerProcess()</a></td><td>Zhuoyu Qian</td></tr>
