--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-10-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1286242'>Use IsValidFor instead of IsConnected in DeleteSelectionCommand</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2018-10-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1286027'>Remove redundant result files in wpt/html/editing/focus</a></td><td>Amos Lim</td></tr>
 <tr><td>2018-10-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1285790'>Rename EventHandlingUtil namepsace to event_handling_util</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-10-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1282644'>Rename TouchActionUtil namepsace to touch_action_util</a></td><td>Zhuoyu Qian</td></tr>
