--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-10-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1288503'>Rename VectorMath namepsace to vector_math.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-10-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1288499'>Rename MediaConstraintsImpl namepsace to media_constraints_impl.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-10-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1288111'>Rename EventUtil namepsace to event_util.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-10-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1286099'>Rename Encoding namepsace to encoding</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-10-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1286242'>Use IsValidFor instead of IsConnected in DeleteSelectionCommand</a></td><td>tanvir.rizvi</td></tr>
