--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-10-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1292652'>Let generated header files follow chromium style on header guards</a></td><td>Amos Lim</td></tr>
+<tr><td>2018-10-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1291190'>Ignore 'usemap' attribute if it contains no #</a></td><td>Amos Lim</td></tr>
+<tr><td>2018-10-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1291192'>probe: Let generated header files follow chromium style on header guards</a></td><td>Amos Lim</td></tr>
 <tr><td>2018-10-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1293052'>Rename AudioUtilities namepsace to audio_utilities</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-10-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1292657'>Rename URLTestHelpers namepsace to url_test_helpers</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-10-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1288167'>bindings: Let generated header files follow chromium style on header guards</a></td><td>Amos Lim</td></tr>
