--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,10 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-10-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1293295'>Rename FloatBoxTest namepsace to float_box_test</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-10-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1292668'>Rename InterpolationSpaceUtilities namepsace to interpolation_space_utilities</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-10-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1293293'>Rename GeometryTest namepsace to geometry_test</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-10-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1293063'>Rename RootScrollerUtil namepsace to root_scroller_util</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-10-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1292652'>Let generated header files follow chromium style on header guards</a></td><td>Amos Lim</td></tr>
 <tr><td>2018-10-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1291190'>Ignore 'usemap' attribute if it contains no #</a></td><td>Amos Lim</td></tr>
 <tr><td>2018-10-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1291192'>probe: Let generated header files follow chromium style on header guards</a></td><td>Amos Lim</td></tr>
