--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-10-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1293329'>Rename NetworkUtils namepsace to network_utils</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-10-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1293067'>Rename FrameTestHelpers namepsace to frame_test_helpers</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-10-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1293291'>Rename PaintPropertyTreePrinter namepsace to paint_property_tree_printer</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-10-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1293059'>Let generated xpath_grammar header follow chromium style on header guards</a></td><td>Amos Lim</td></tr>
