--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-10-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1297224'>Stop creating VisiblePosition in HitTestResultIsMisspelled()</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-10-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1297850'>Remove VisiblePositionForViewportPoint()</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-10-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1293329'>Rename NetworkUtils namepsace to network_utils</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-10-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1293067'>Rename FrameTestHelpers namepsace to frame_test_helpers</a></td><td>Zhuoyu Qian</td></tr>
