--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-10-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1301136'>Rename MediaElementParserHelpers namepsace to media_element_parser_helpers</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-10-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1299373'>Rename StyleChangeReason namepsace to style_change_reason</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-10-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1298946'>Rename BackgroundScheduler namepsace to background_scheduler</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-10-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1298823'>Rename CanvasHeuristicParameters namepsace to canvas_heuristic_parameters</a></td><td>Zhuoyu Qian</td></tr>
