--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-10-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1304116'>Rename SVGPathParser namepsace to svg_path_parser</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-10-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1301575'>Rename WebCoreTestSupport namepsace to blink::web_core_test_support</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-10-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1301693'>Rename OpenType namepsace to open_type</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-10-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1301696'>Rename DecimalPrivate namepsace to decimal_private</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2018-10-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1301136'>Rename MediaElementParserHelpers namepsace to media_element_parser_helpers</a></td><td>Zhuoyu Qian</td></tr>
