--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-10-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1304180'>Forms: Remove delegation of focus on legend</a></td><td>Amos Lim</td></tr>
+<tr><td>2018-10-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1304185'>Convert WebOriginTrials namepsace to a static-only class</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-10-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1303326'>Rename StyleChangeExtraData namepsace to style_change_extra_data</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-10-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1304116'>Rename SVGPathParser namepsace to svg_path_parser</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-10-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1301575'>Rename WebCoreTestSupport namepsace to blink::web_core_test_support</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-10-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1301693'>Rename OpenType namepsace to open_type</a></td><td>Zhuoyu Qian</td></tr>
