--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-10-31</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1308954'>Rename sub-namespaces of vector_math to be lower-cased</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-10-31</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1290583'>Remove LogoDelegate</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-10-31</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1297227'>Stop creating VisiblePosition in VisiblePositionOfHitTestResult()</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-10-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1307026'>Convert WebOriginTrials namepsace to a static-only class</a></td><td>Zhuoyu Qian</td></tr>
