--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-11-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1312182'>Move build/scripts/{ =&gt; core/css}/make_css_tokenizer_codepoints.py</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-11-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1312147'>Rename FileError namepsace to file_error</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-11-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1267155'>PaymentRequest: Use TraceWrapperV8Reference instead of ScriptValue</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-11-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1307315'>Stop creating VisiblePosition in VisiblePositionForContentsPoint()</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-11-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1309377'>Move build/scripts/{ =&gt; core/css}/make_css_primitive_value_unit_trie.py</a></td><td>Amos Lim</td></tr>
