--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-11-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1312144'>PaymentRequest: retry()'s errorFields should be optional per WebIDL</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-11-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1309568'>Stop using VisiblePosition in VisiblePosition{Before/After}Node</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-11-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1312151'>Rename ShadowElementNames namespace to shadow_element_names</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-11-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1312182'>Move build/scripts/{ =&gt; core/css}/make_css_tokenizer_codepoints.py</a></td><td>Zhuoyu Qian</td></tr>
