--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-11-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1303324'>Rename ui/base/touch/touch_device* to ui/base/pointer/pointer_device*</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-11-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1319389'>Rename CSSParsingUtils namepsace to css_parsing_utils</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-11-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1317300'>CSS: serialize pointer-events keywords in lower case</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-11-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1317416'>Rename sub-namespaces of blink in core/animation/ to be lower-cased</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-11-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1314015'>Move build/scripts/{ =&gt; core/css}/make_css_value_id_mappings.py</a></td><td>Zhuoyu Qian</td></tr>
