--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-11-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1328635'>Rename CORS namepsace to cors</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-11-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1314083'>Change file_error::ErrorCode to be an enum class.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-11-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1325288'>Rename TraceEvent namepsace to trace_event</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-11-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1319653'>PaymentRequest: Add a use counter for updateWith() w/o shippingOptions</a></td><td>Jinho Bang</td></tr>
