--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,10 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-11-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1329710'>Rename WTF::Internal namepsace to WTF::internal</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-11-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1329711'>Rename WTF::{Arena|Tree}TestHelpers namepsace to WTF::{arena|tree}_test_helpers</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-11-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1329812'>Rename StringWrapperCFAllocator namepsace to string_wrapper_cf_allocator</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2018-11-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1325582'>Move functions in blink::WebCORS to platform/loader/cors/cors.{h,cc}</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-11-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1328635'>Rename CORS namepsace to cors</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-11-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1314083'>Change file_error::ErrorCode to be an enum class.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-11-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1325288'>Rename TraceEvent namepsace to trace_event</a></td><td>Zhuoyu Qian</td></tr>
