--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-11-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1325599'>Add a UseCounter for default in custom-ident</a></td><td>Amos Lim</td></tr>
 <tr><td>2018-11-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1333095'>Fix old links in css property template</a></td><td>Amos Lim</td></tr>
 <tr><td>2018-11-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1333168'>Rename ScrollCustomization namepsace to scroll_customization</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-11-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1331106'>Move build/scripts/{ =&gt; core/style}/make_computed_style_base.py</a></td><td>Zhuoyu Qian</td></tr>
