--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-11-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1189688'>service worker: Let register('data://blah') throw a TypeError</a></td><td>Amos Lim</td></tr>
 <tr><td>2018-11-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1337649'>Rename SIMD namepsace to simd</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-11-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1334995'>Move build/scripts/{ =&gt; core/css}/make_css_property_names.py</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-11-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1334674'>Rename OriginTrials namepsace to origin_trials</a></td><td>Zhuoyu Qian</td></tr>
