--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-11-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1341440'>Fix presubmit error on third_party/WebKit/LayoutTests/OWNERS</a></td><td>Amos Lim</td></tr>
 <tr><td>2018-11-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1337670'>css: Drop zero value for y of serialization of 2d translate</a></td><td>Amos Lim</td></tr>
 <tr><td>2018-11-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1339680'>Remove URLUtilsReadOnly IDL by flattening it into WorkerLocation</a></td><td>Amos Lim</td></tr>
 <tr><td>2018-11-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1189688'>service worker: Let register('data://blah') throw a TypeError</a></td><td>Amos Lim</td></tr>
