--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-11-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1343595'>Make a static-only class for WindowEventHandlers instead of namespace</a></td><td>DongJun Kim</td></tr>
 <tr><td>2018-11-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1328628'>Rename enum class file_error::ErrorCode to FileErrorCode</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-11-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1341778'>Rename CSSLonghand/CSSShorthand namepsace to css_longhand/css_shorthand</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-11-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1341440'>Fix presubmit error on third_party/WebKit/LayoutTests/OWNERS</a></td><td>Amos Lim</td></tr>
