--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-11-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1352069'>Rename WTF::Unicode namepsace to WTF::unicode</a></td><td>DongJun Kim</td></tr>
 <tr><td>2018-11-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1351203'>Rename EncodingEnum namepsace to encoding_enum</a></td><td>DongJun Kim</td></tr>
 <tr><td>2018-11-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1348884'>Rename CompositorTargetProperty namepsace to compositor_target_property</a></td><td>DongJun Kim</td></tr>
 <tr><td>2018-11-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1343877'>Rename Inspector* namepsace to inspector_*</a></td><td>DongJun Kim</td></tr>
