--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-12-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1360211'>Replace IndexedDBContext::CopyOriginData to use url::Origin instead of GURL.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-12-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1280563'>PaymentRequest: Make shippingOptions optional in non-shipping events</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-12-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1361753'>Change Blink namespace in comment to blink</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-12-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1359932'>PaymentRequest: Warn when errorFields don't match request[[options]]</a></td><td>Jinho Bang</td></tr>
