--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-12-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1367083'>Rename chrome/browser/net/spdyproxy to chrome/browser/data_reduction_proxy</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-12-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1373491'>Fix error link in README.md</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-12-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1364992'>Replace IndexedDBContext::GetFilePathForTesting to use url::Origin instead of GURL.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-12-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1360211'>Replace IndexedDBContext::CopyOriginData to use url::Origin instead of GURL.</a></td><td>Zhuoyu Qian</td></tr>
