--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2018-12-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1377474'>Cleanup arraysize usage in //storage</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2018-12-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1340313'>Add early return to StringView match.</a></td><td>Gabor Rapcsanyi</td></tr>
 <tr><td>2018-12-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1374192'>PaymentRequest: Remove shipping_address_errors_ field</a></td><td>Jinho Bang</td></tr>
 <tr><td>2018-12-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/1375176'>Use base::size() instead of arraysize</a></td><td>Zhuoyu Qian</td></tr>
